# senior-python

./: .gitignore  .python-version  AGENTS.md  README.md  project-health-checker.sh
.github/workflows/: ci.yml
mytool/: .coverage  README.md  dev_commands.sh  pyproject.toml
mytool/src/mytool/: __init__.py  calculator.py  text_processor.py  utils.py
mytool/tests/: test_calculator.py  test_text_processor.py  test_utils.py
session1/: csv_parser.py  sample.csv
session2/: user_service.py
session3/: generator_pipeline.py  log_parser.py
session4/: decorators.py  registry.py
session5/: crawler_async.py
session6/: perf_test.py
session8/: .env  .env.production  .gitignore  Dockerfile  README.md  __init__.py  analysis.py  docker-compose.yml  hanoi_users.csv  logging_config.py  main.py  pyproject.toml  sample.csv
session8/tests/: conftest.py  test_main.py
