[tool.poetry]
name = "session8-fastapi-pandas"
version = "0.1.0"
description = "FastAPI CRUD and Pandas CSV analysis examples"
authors = ["Felix <flexnguyen@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.0.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
