[tool.poetry]
name = "session8-fastapi-pandas"
version = "0.1.0"
description = "FastAPI CRUD and Pandas CSV analysis examples"
authors = ["Felix <flexnguyen@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.0.0"
pandas = "^2.0.0"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
loguru = "^0.7.2"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
